force-app/main/default/objects/UserTerritoryAssociation_Stage__c/UserTerritoryAssociation_Stage__c.object-meta.xml
<CustomObject>
    <label>UserTerritoryAssociation Stage</label>
    <nameField>
        <displayFormat>UTAS-{000000}</displayFormat>
        <label>UserTerritoryAssociation Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserTerritoryAssociation Stage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>