force-app/main/default/objects/UserTerritoryAssociation_Stage__c/fields/Adaptive_Id__c.field-meta.xml
<CustomField>
    <fullName>Adaptive_Id__c</fullName>
    <label>Adaptive Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>