force-app/main/default/objects/UserTerritoryAssociation_Stage__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>(Deprecated) Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>