force-app/main/default/objects/UserTerritoryAssociation_Stage__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>ETM-184: Effective end date of User unassigned from a Territory</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>