force-app/main/default/objects/UserTerritoryAssociation_Stage__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>(Deprecated) Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>