force-app/main/default/objects/UserTerritoryAssociation_Stage__c/fields/RoleInTerritory2__c.field-meta.xml
<CustomField>
    <fullName>RoleInTerritory2__c</fullName>
    <label>RoleInTerritory2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Alliance Rep</fullName>
            </value>
            <value>
                <fullName>Alliances Leaders</fullName>
            </value>
            <value>
                <fullName>Application Solution Architect</fullName>
            </value>
            <value>
                <fullName>Area VP</fullName>
            </value>
            <value>
                <fullName>Associate Field Consultant</fullName>
            </value>
            <value>
                <fullName>AWS/GCP Alliance Rep</fullName>
            </value>
            <value>
                <fullName>CCO</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>CDM - DR Owner</fullName>
            </value>
            <value>
                <fullName>CDM Manager</fullName>
            </value>
            <value>
                <fullName>CDM VP</fullName>
            </value>
            <value>
                <fullName>Channel Director</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Channel Sales Director</fullName>
            </value>
            <value>
                <fullName>Channel Sales Manager</fullName>
            </value>
            <value>
                <fullName>Channel Sales VP</fullName>
            </value>
            <value>
                <fullName>Channel Sales VP (some)</fullName>
            </value>
            <value>
                <fullName>Channel SE</fullName>
            </value>
            <value>
                <fullName>Channel VP</fullName>
            </value>
            <value>
                <fullName>CHSEM</fullName>
            </value>
            <value>
                <fullName>Cloud AE</fullName>
            </value>
            <value>
                <fullName>Cloud SE</fullName>
            </value>
            <value>
                <fullName>CRO</fullName>
            </value>
            <value>
                <fullName>CXO Field CTO</fullName>
            </value>
            <value>
                <fullName>Field Consultant</fullName>
            </value>
            <value>
                <fullName>Field Sales Representative</fullName>
            </value>
            <value>
                <fullName>IAM</fullName>
            </value>
            <value>
                <fullName>IAM Manager</fullName>
            </value>
            <value>
                <fullName>Industry Solution Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>