force-app/main/default/objects/UserTerritoryAssociation_Stage__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>ETM-184: Effective start date of User assigned to a Territory</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>