force-app/main/default/objects/UserTerritoryAssociation_Stage__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>(Deprecated) Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>