force-app/main/default/objects/UserTerritoryAssociation_Stage__c/fields/Territory_Type__c.field-meta.xml
<CustomField>
    <fullName>Territory_Type__c</fullName>
    <label>(Deprecated) Territory Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>