force-app/main/default/objects/UserTerritoryAssociation_Stage__c/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <label>(Deprecated) Theatre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>