force-app/main/default/objects/UserTerritoryAssociation_Stage__c/fields/User_Old__c.field-meta.xml
<CustomField>
    <fullName>User_Old__c</fullName>
    <label>User Old</label>
    <length>50</length>
    <type>Text</type>
</CustomField>