force-app/main/default/objects/UserTerritoryAssociation_Stage__c/validationRules/End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(SQL_Operation__c, &quot;Delete&quot;), ISBLANK(End_Date__c))</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be entered for Delete SQL operation</errorMessage>
</ValidationRule>