force-app/main/default/objects/UserTerritoryAssociation_Stage__c/validationRules/Prevent_UTA_Stage_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_UTA_Stage_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.ShGl_DisableFunctionalityLogic__c.ETM_Manage_UTA_Stage__c),
$Profile.Name = &quot;Sales Operations&quot;
)</errorConditionFormula>
    <errorMessage>You do not have access to manage UTA Stage records. Please contact salesops.psteam@rubrik.com to get the access.</errorMessage>
</ValidationRule>