force-app/main/default/objects/UserTerritoryAssociation_Stage__c/validationRules/Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(SQL_Operation__c, &quot;Add&quot;), ISBLANK(Start_Date__c))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date must be entered for Add SQL operation</errorMessage>
</ValidationRule>